[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Minigame Kaique/Personagem_1-removebg-preview (1).png" type="Texture" id=1]
[ext_resource path="res://Sprites/Minigame Kaique/Personagem_4-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Minigame Kaique/Personagem_2-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Minigame Kaique/Personagem_5-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Minigame Kaique/Personagem_6-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Minigame Kaique/Personagem_3-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Minigame Microsoft.gd" type="Script" id=7]
[ext_resource path="res://Fonts/Louis George Cafe.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Sprites/Minigame Kaique/fonteES.tres" type="DynamicFont" id=9]
[ext_resource path="res://Sprites/Minigame Kaique/lousa.Eng.Softw.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 1
outline_color = Color( 1, 1, 0, 1 )
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -1488.0
margin_top = -488.0
margin_right = 3016.0
margin_bottom = 2115.0
rect_pivot_offset = Vector2( 1568, 1156 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "s"
}

[node name="LousaEngSoftw" type="Sprite" parent="Control/ColorRect"]
position = Vector2( 2448, 1018.75 )
scale = Vector2( 3.63636, 3.33077 )
texture = ExtResource( 10 )

[node name="personagem1" type="ColorRect" parent="Control/ColorRect"]
margin_left = 1592.0
margin_top = 744.0
margin_right = 2136.0
margin_bottom = 1056.0
color = Color( 0.454902, 0.454902, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem1-removebg-preview(1)" type="Sprite" parent="Control/ColorRect/personagem1"]
position = Vector2( 52.75, 153.25 )
scale = Vector2( 1.68033, 1.56404 )
texture = ExtResource( 1 )

[node name="habilidade1" type="Label" parent="Control/ColorRect/personagem1"]
margin_left = 144.0
margin_right = 472.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 3 )
text = "                João
Habilidades:
Java: 20
Python: 90
Arte 2D: 10
Arte 3D: 0
Marketing Digital: 30
E-commerce: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagem2" type="ColorRect" parent="Control/ColorRect"]
margin_left = 2216.0
margin_top = 746.0
margin_right = 2728.0
margin_bottom = 1066.0
color = Color( 0.454902, 0.454902, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem2-removebg-preview" type="Sprite" parent="Control/ColorRect/personagem2"]
position = Vector2( 50.75, 158.25 )
scale = Vector2( 1.70755, 1.76776 )
texture = ExtResource( 3 )

[node name="habilidade2" type="Label" parent="Control/ColorRect/personagem2"]
margin_left = 152.0
margin_top = 8.0
margin_right = 456.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 4 )
text = "               Fernanda
Habilidades:
Java: 95
Python: 10
Arte 2D: 20
Arte 3D: 10
Marketing Digital: 10
E-commerce: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagem3" type="ColorRect" parent="Control/ColorRect"]
margin_left = 2800.0
margin_top = 746.0
margin_right = 3312.0
margin_bottom = 1066.0
color = Color( 0.454902, 0.454902, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem3-removebg-preview" type="Sprite" parent="Control/ColorRect/personagem3"]
position = Vector2( 54.5, 160 )
scale = Vector2( 1.83333, 1.65803 )
texture = ExtResource( 6 )

[node name="habilidade3" type="Label" parent="Control/ColorRect/personagem3"]
margin_left = 144.0
margin_top = -3.0
margin_right = 464.0
margin_bottom = 325.0
custom_fonts/font = ExtResource( 9 )
text = "            Raphael
Habilidades:
Java: 20
Python: 10
Arte 2D: 30
Arte 3D: 20
Marketing Digital: 40
E-commerce: 95"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagem4" type="ColorRect" parent="Control/ColorRect"]
margin_left = 1592.0
margin_top = 1168.0
margin_right = 2128.0
margin_bottom = 1488.0
color = Color( 0.454902, 0.454902, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem4-removebg-preview" type="Sprite" parent="Control/ColorRect/personagem4"]
position = Vector2( 67, 158.75 )
scale = Vector2( 1.73077, 1.77322 )
texture = ExtResource( 4 )

[node name="habilidade4" type="Label" parent="Control/ColorRect/personagem4"]
margin_left = 152.0
margin_top = 8.0
margin_right = 470.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 9 )
text = "             Marina
Habilidades:
Java: 10
Python: 30
Arte 2D: 10
Arte 3D: 20
Marketing Digital: 80
E-commerce: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagem5" type="ColorRect" parent="Control/ColorRect"]
margin_left = 2211.0
margin_top = 1165.0
margin_right = 2723.0
margin_bottom = 1486.0
color = Color( 0.454902, 0.454902, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem5-removebg-preview" type="Sprite" parent="Control/ColorRect/personagem5"]
position = Vector2( 73.5, 151.5 )
scale = Vector2( 1.87931, 1.71348 )
texture = ExtResource( 2 )

[node name="habilidade5" type="Label" parent="Control/ColorRect/personagem5"]
margin_left = 168.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 9 )
text = "             Ana
Habilidades:
Java: 10
Python: 30
Arte 2D: 80
Arte 3D: 50
Marketing Digital: 10
E-commerce: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagem6" type="ColorRect" parent="Control/ColorRect"]
margin_left = 2800.0
margin_top = 1165.0
margin_right = 3312.0
margin_bottom = 1486.0
color = Color( 0.454902, 0.454902, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem6-removebg-preview" type="Sprite" parent="Control/ColorRect/personagem6"]
position = Vector2( 56, 154 )
scale = Vector2( 1.66667, 1.71739 )
texture = ExtResource( 5 )

[node name="habilidade6" type="Label" parent="Control/ColorRect/personagem6"]
margin_left = 160.0
margin_right = 496.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 9 )
text = "           Leandro
Habilidades:
Java: 5
Python: 10
Arte 2D: 20
Arte 3D: 90
Marketing Digital: 20
E-commerce: 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="explicação" type="Label" parent="Control/ColorRect"]
margin_left = 1584.0
margin_top = 560.0
margin_right = 2651.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 1 )
text = "Selecione os 3 programadores mais adequados para 
a montagem da equipe que irá trabalhar pra o hospital:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 104.0
margin_top = 264.0
margin_right = 647.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 728.0
margin_top = 256.0
margin_right = 1235.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 1312.0
margin_top = 256.0
margin_right = 1819.0
margin_bottom = 579.0

[node name="Button4" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 126.0
margin_top = 680.0
margin_right = 637.0
margin_bottom = 1000.0
custom_fonts/font = ExtResource( 9 )

[node name="Button5" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 733.0
margin_top = 677.0
margin_right = 1237.0
margin_bottom = 997.0

[node name="Button6" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 1312.0
margin_top = 680.0
margin_right = 1824.0
margin_bottom = 993.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pontos" type="Label" parent="."]
margin_left = 1368.0
margin_top = 104.0
margin_right = 1776.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
text = "pontos:300"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Control/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Control/Button6" to="." method="_on_Button6_pressed"]
